[project]
name = "block-kit-sdk"
version = "0.1.dev0"
description = "Python SDK for building Ampr blocks"
authors = [
    {name = "Chris Georgen",email = "c-georgen@users.noreply.github.com"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "websocket (>=0.2.1,<0.3.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-extra-types (>=2.10.5,<3.0.0)",
    "pycountry (>=24.6.1,<25.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

